# tpp-mlir

./: CMakeLists.txt  README.md  requirements.txt
.github/workflows/: tpp-benchmark.yml  tpp-graviton.yml  tpp-llvm.yml  tpp-mlir.yml  tpp-uarch.yml
benchmarks/: driver.py
benchmarks/harness/: requirements.txt
benchmarks/mlir/: fp32-pack-gemm-operand-a-512x1024.mlir  fp32-pack-gemm-operand-b-512x1024.mlir  fp32-unpack-gemm-operand-a-512x512.mlir
build_tools/: llvm_version.txt
cmake/modules/: openmp.cmake  xsmm-dnn.cmake  xsmm.cmake
docs/: TPPDialect.md
include/TPP/: PassBundles.td  Passes.h  Passes.td
include/TPP-CAPI/: Dialects.h
lib/: CMakeLists.txt
lib/TPP/: CMakeLists.txt  DefaultPipeline.cpp  DefaultTppPasses.cpp  LoadTppDialects.cpp  LowerToLLVMPipeline.cpp
lib/TPP-CAPI/: CMakeLists.txt  Dialects.cpp
python/: CMakeLists.txt  TPPDialects.cpp
runtime/Xsmm/: XsmmRunnerUtils.cpp  XsmmRunnerUtils.h
scripts/benchmarks/: gen-sweep-config.py  plot_benchmarks.py  run-sweep.sh
scripts/ci/: common.sh  setup_gpu_env.sh
scripts/debug/: README.md  check_accuracy.sh  debug_all_passes.sh  diff.py  dump_assembly.sh  testquant.sh
scripts/github/: benchmark.sh  build_llvm.sh  build_tpp.sh
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/BF16/: brgemm-tpp.mlir  brgemm-vnni.mlir  matmul-tiled-vnni.mlir  matmul-vnni.mlir
test/GPU/: set-spirv-abi-attr.mlir
test/Integration/: copy.mlir  matmul-tpp-with-print.mlir  (+34 more)
tools/: CMakeLists.txt
tools/check-cpuid/: CMakeLists.txt  check-cpuid.c
tools/tpp-opt/: CMakeLists.txt  tpp-opt.cpp
(+268 files in other folders)
